--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,18 +18,23 @@ jobs:
       with:
         node-version: '14'
         
+    - name: Install Bun
+      run: |
+        curl -fsSL https://bun.sh/install | bash
+        echo "$HOME/.bun/bin" >> $GITHUB_PATH
+        
     - name: Install dependencies
-      run: npm ci
+      run: bun install
         
     - name: Run tests
-      run: npm test
+      run: bun test
         
     - name: Build
-      run: npm run build
+      run: bun build
         
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./dist
         publish_branch: gh-pages
