Change dev and build scripts to use bun

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "bun x --bun vite",
+    "build": "bun x --bun vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
