--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       run: bun test
         
     - name: Build
-      run: bun build
+      run: bun run build
         
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
