--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,3 +46,5 @@ jobs:
       uses: actions/deploy-pages@v4
     permissions:
       id-token: "write"
+      pages: "write"
+      contents: "read"
